--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                                     Alyson Brooks (L; <a href='slides/brooks.pdf'>slides</a>)<br>
                                     Martin Rey (S; <a href='slides/rey.pdf'>slides</a>)<br>
                                     Azi Fattahi (S; <a href='slides/fattahi.pdf'>slides</a>)<br>
-                                    Vasily Belokurov (L)<br>
+                                    Vasily Belokurov (L; <a href='slides/belokurov.pdf'>slides</a>)<br>
                                 </section>
                                 <section>
                                     <b>Session 2: 11:00 - 12:30</b><br>
@@ -621,7 +621,7 @@
                                     Tiffany Hsyu (S; <a href='slides/hsyu.pdf'>slides</a>)<br>
                                     Kristen McQuinn (S)<br>
                                     Bethan James (S; <a href='slides/james.pdf'>slides</a>)<br>
-                                    Nimisha Kumari (S)<br>
+                                    Nimisha Kumari (S; <a href='slides/kumari.pdf'>slides</a>)<br>
                                     Claudia Scarlata (L)<br>
                                 </section>
                                 <section>
@@ -670,7 +670,7 @@
                                     Josh Simon (S; <a href='slides/simon.pdf'>slides</a>)<br>
                                     John Wise (L; <a href='slides/wise.pdf'>slides</a>)<br>
                                     Louise Welsh (S; <a href='slides/welsh.pdf'>slides</a>)<br>
-                                    Else Starkenburg (L)<br>
+                                    Else Starkenburg (L; <a href='slides/starkenburg.pdf'>slides</a>)<br>
                                 </section>
                                 <section>
                                     <b>Session 14: 15:55 - 17:00</b><br>
@@ -698,8 +698,8 @@
                                     <section>
                                         <b>Session 16: 10:55 - 12:20</b><br>
                                         Chair: Andrew Wetzel<br>
-                                        Marius Cautun (S)<br>
-                                        Nico Garavito-Camargo (S)<br>
+                                        Marius Cautun (S; <a href='slides/cautun.pdf'>slides</a>)<br>
+                                        Nico Garavito-Camargo (S; <a href='slides/garavitoCamargo.pdf'>slides</a>)<br>
                                         Christine Simpson (S; <a href='slides/simpson.pdf'>slides</a>)<br>
                                         Ana Bonaca (L)<br>
                                         Denis Erkal (S)<br>
@@ -718,7 +718,7 @@
                                         <b>Session 18: 16:00 - 17:00</b><br>
 										Chair: Alis Deason<br>
                                         Risa Wechsler (L)<br>
-                                        Carlos Frenk (L)<br>
+                                        Carlos Frenk (L; <a href='slides/frenk.pdf'>slides</a>)<br>
                                         Concluding Remarks - Alis Deason (S)<br>
                                     </section>
                                 </div>
