--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                                 <section>
                                     <b>Session 11: 09:00 - 10:30</b><br>
                                     Chair: Kristen McQuinn<br>
-                                    Discussion (Michelle Collins, Ryan Cooke, Brian Siana)<br>
+                                    Discussion (Michelle Collins, Ryan Cooke, Brian Siana; <a href='slides/discussion2.pdf'>slide</a>)<br>
                                     Adam Smercina (S; <a href='slides/smercina.pdf'>slides</a>)<br>
                                     Sabrina Stierwalt (S; <a href='slides/stierwalt.pdf'>slides</a>)<br>
                                     Ana Hidalgo-Gamez (S)<br>
