--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                                 <section>
                                     <b>Session 5: 09:00 - 10:30</b><br>
                                     Chair: Betsey Adams<br>
-                                    Discussion (Gurtina Besla, Alis Deason, Andrew Pontzen)<br>
+                                    Discussion (Gurtina Besla, Alis Deason, Andrew Pontzen; <a href='slides/discussion1.jpg'>slide</a>)<br>
                                     Kareem El-Badry (S; <a href='slides/elbadry.pdf'>slides</a>)<br>
                                     Shobita Satyapal (S; <a href='slides/satyapal.pdf'>slides</a>)<br>
                                     Christina Manzano-King (S; <a href='slides/manzano-king.pdf'>slides</a>)<br>
