--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                                         Chervin Laporte (S)<br>
                                         Nora Shipp (S; <a href='slides/shipp.pdf'>slides</a>)<br>
                                         Ian Roederer (S; <a href='slides/roederer.pdf'>slides</a>)<br>
-                                        Nathan Sandford (S)<br>
+                                        Nathan Sandford (S; <a href='slides/sandford.pdf'>slides</a>)<br>
                                         Evan Skillman (S; <a href='slides/skillman.pdf'>slides</a>)<br>
                                     </section>
                                     <section>
