--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                                         Nico Garavito-Camargo (S; <a href='slides/garavitoCamargo.pdf'>slides</a>)<br>
                                         Christine Simpson (S; <a href='slides/simpson.pdf'>slides</a>)<br>
                                         Ana Bonaca (L)<br>
-                                        Denis Erkal (S)<br>
+                                        Denis Erkal (S; <a href='slides/erkal.pdf'>slides</a>)<br>
                                     </section>
                                     <section>
                                         <b>Session 17: 14:00 - 15:30</b><br>
