--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                                     <b>Session 12: 11:00 - 12:35</b><br>
                                     Chair: Michelle Collins<br>
                                     Clare Higgs (S; <a href='slides/higgs.pdf'>slides</a>)<br>
-                                    Betsey Adams (S)<br>
+                                    Betsey Adams (S; <a href='slides/adams.pdf'>slides</a>)<br>
                                     Erik Tollerud (S; <a href='slides/tollerud.pdf'>slides</a>)<br>
                                     Sownak Bose (L; <a href='slides/bose.pdf'>slides</a>)<br>
                                     Dan Weisz (L)<br>
