--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                                     Discussion (Michelle Collins, Ryan Cooke, Brian Siana; <a href='slides/discussion2.pdf'>slide</a>)<br>
                                     Adam Smercina (S; <a href='slides/smercina.pdf'>slides</a>)<br>
                                     Sabrina Stierwalt (S; <a href='slides/stierwalt.pdf'>slides</a>)<br>
-                                    Ana Hidalgo-Gamez (S)<br>
+                                    Ana Hidalgo-Gamez (S; <a href='slides/hidalgo-gamez.pdf'>slides</a>)<br>
                                     Francesca Annibali (S)<br>
                                 </section>
                                 <section>
